# Plankton

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.zh-CN.md  plankton.toml
.codex/skills/plankton-operator/: SKILL.md
.codex/skills/secret-access/: SKILL.md
.github/workflows/: ci.yml  release-cli.yml
apps/desktop/: .prettierignore  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
apps/desktop/src/: App.test.tsx  App.tsx  acpSettings.test.ts  acpSettings.ts  codePreview.test.ts  codePreview.ts  dashboardModel.test.ts  dashboardModel.ts  formatters.test.ts  formatters.ts  handoff.test.ts  handoff.ts  i18n.test.ts  i18n.ts  index.css  main.ts  main.tsx  providerRuntime.test.ts  providerRuntime.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: import_browse.rs  main.rs
apps/desktop/src/components/: ImportedSecretCatalogPanel.tsx  PasswordManagementView.tsx
apps/desktop/src/hooks/: useDesktopApp.test.tsx  useDesktopApp.ts
crates/plankton-cli/: Cargo.toml
crates/plankton-cli/src/: desktop_handoff.rs  main.rs
crates/plankton-core/: Cargo.toml
crates/plankton-core/examples/: acp_codex_smoke.rs  claude_smoke.rs
crates/plankton-core/src/: acp.rs  automatic.rs  call_chain.rs  config.rs  domain.rs  lib.rs  provider.rs  sanitization.rs  template.rs  value_resolver.rs
crates/plankton-store/: Cargo.toml
crates/plankton-store/migrations/: 0001_initial.sql  0002_read_models.sql  0003_llm_suggestions.sql  0004_auto_decisions.sql
crates/plankton-store/src/: lib.rs  read.rs  sqlite.rs
docs/: p1-dependency-boundaries.md  p1-runbook.md
docs/adr/: 0001-p1-dependency-boundaries.md
scripts/: package-cli-release.sh  package-desktop-release.sh  render-homebrew-cask.sh  render-homebrew-formula.sh
