[workspace]
members = ["crates/plankton-core", "crates/plankton-store", "crates/plankton-cli", "apps/desktop/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.16"
license = "MIT"
homepage = "https://github.com/zqqqqz2000/Plankton"
repository = "https://github.com/zqqqqz2000/Plankton"

[workspace.dependencies]
agent-client-protocol = { version = "0.10.4", features = ["unstable_session_usage"] }
async-openai = { version = "0.34", default-features = false, features = ["rustls", "chat-completion"] }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.14"
directories = "5.0"
dotenvy = "0.15"
minijinja = "2.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json", "migrate"] }
tauri = "2.0"
tauri-build = "2.0"
tauri-plugin-log = "2.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "io-util", "process", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
toml = "0.8"
uuid = { version = "1.8", features = ["serde", "v4"] }
sysinfo = { version = "0.38.4", default-features = true }
