[package]
name = "plankton-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
plankton-core = { path = "../plankton-core" }
plankton-store = { path = "../plankton-store" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
