[package]
name = "plankton-cli"
description = "Read-only CLI for Plankton access attempts, request inspection, and audit queries"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
plankton-core = { path = "../plankton-core" }
plankton-store = { path = "../plankton-store" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
