[package]
name = "plankton-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
plankton-core = { path = "../plankton-core" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.13"
